--- a/.env.example
+++ b/.env.example
@@ -59,14 +59,14 @@ NO_PROXY=localhost,127.0.0.1,eastmoney.com,push2.eastmoney.com,82.push2.eastmone
 # 🚀 DeepSeek V3 API 密钥（推荐，性价比极高）
 # 获取地址: https://platform.deepseek.com/
 # 获取步骤：注册账号 -> 创建API Key -> 复制密钥
-DEEPSEEK_API_KEY=your_deepseek_api_key_here
+DEEPSEEK_API_KEY=sk-7ab5074bb2c642119520fb9a8d35008a
 DEEPSEEK_BASE_URL=https://api.deepseek.com
-DEEPSEEK_ENABLED=false
+DEEPSEEK_ENABLED=true
 
 # 🇨🇳 阿里百炼 API 密钥（推荐，国产稳定）
 # 获取地址: https://dashscope.aliyun.com/
 # 获取步骤：注册阿里云账号 -> 开通百炼服务 -> 获取API密钥
-DASHSCOPE_API_KEY=your_dashscope_api_key_here
+DASHSCOPE_API_KEY=OFqiOqqQrnkdV4IRgek5Kin9KUWEC2
 
 # [RECOMMENDED] 数据源配置
 # 用于获取股票数据，推荐 AKShare（免费无需密钥）或 Tushare（专业数据）
@@ -79,8 +79,8 @@ DEFAULT_CHINA_DATA_SOURCE=akshare
 # 获取地址: https://tushare.pro/register?reg=tacn
 # 获取步骤：注册账号 -> 邮箱验证 -> 获取Token
 # 注意：免费用户有调用频率限制，建议升级积分到2000积分以上，实时行情需要另外交费
-TUSHARE_TOKEN=your_tushare_token_here
-TUSHARE_ENABLED=false
+TUSHARE_TOKEN=37834cc61a3600b67b0111c973ec2702444d940571d58552afd8645c
+TUSHARE_ENABLED=True
 
 # 📊 FinnHub API 密钥（推荐，美股数据）
 # 获取地址: https://finnhub.io/
